# toy

./: .gitignore  Dockerfile  Dockerfile.deps  Makefile  atime.py  basic instructions.txt  big_merge.txt  main.py  maincaller.py  pyproject.toml  readme.md  recursive_task_timer.py  requirements.txt  simple_async_class.py  streamer_requirements.txt
VI/: .vimrc
VI/.vim/ftdetect/: tut.vim
VI/.vim/syntax/: tutor.vim
asyncio/: README.txt
elixir/src/: README.txt
go/src/: README.txt
haskell/: README.txt
notes/: Readme.dedup.py.txt  Readme.nodups.txt  TwsApiCpp_bindings_client_uberfoot.txt  journal.txt  scavenger_hunt.tut  scavenger_hunt.txt
python/: README.txt
python/src/: README.txt  requirements.txt  simple2.py  simple3.py
python/src/bot/: analyzer.py  toy.py  util.py
python/src/streamer/: collect.py  config.py  connect.py  (+4 more)
scripts/: dedup.py  nodups  reset_gateway  variables  zip.py
src/: main.py  requirements.txt  simple2.py  simple3.py  simpletest2.py  simpletest3.py
src/bot/: conf.py  connect.py  contracts.py  crypto.py  exp.py  loggingx.py  main.py  orders.py  plot.py  portfolio.py  provider.py  ranges.py  state_config.py  strategy.py  toy.py  trader.py
src/python/: .gitignore  main.py  pkgs-required.txt  requirements.txt  simpletest1.py
src/streamer/: candles.py  conf.py  config.py  connect.py  connectx.py  emacalc.py  getenviron.py  loggingx.py  main.py  scanner.py  secrets_template.py  setup.py  ticks.py
src/streamer_proj/: pytest.ini
src/tests/: connect_test.py
streamer/: conf.py  connect.py  ticks.py
tests/: connect_test.py
(+29 files in other folders)
